--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+
   margin: 0;
   font-family: "Open Sans", sans-serif;
   background: #222;
@@ -60,3 +60,39 @@ button:hover {
 h1.temp {
   margin: 0;
 }
+
+.secondCard {
+  background: #000000d0;
+  color: white;
+  padding: 2em;
+  border-radius: 30px;
+  width: 100%;
+  max-width: 420px;
+  margin: 1em;
+  align-items: center;
+}
+
+table {
+  background-color: #7c7c7c2b;
+  border-radius: 10px;
+}
+form {
+  display: flex;
+  flex-direction: row;
+}
+
+.btn-wrapper {
+  display: flex;
+  flex-direction: row;
+}
+
+/* th {
+  -webkit-transition-duration: 200ms, 200ms, 200ms;
+  -webkit-transition-property: background-image, border, font-weight;
+  display: inline-block;
+  height: 95px;
+  line-height: 1;
+  margin-right: 7px;
+  text-align: center;
+  width: 75px;
+} */
